--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  .card.col-lg-6.align-middle
-    .display-6 Chuck Norris Joke Generator
+  .card.col-lg-6.align-middle.text-white.bg-secondary
+    .text-nowrap.display-4.card-header Chuck Norris API Demo
     .card-body
-      p#data
-      button.refresh Refresh
+      p#data.lead
+      button.refresh.btn.btn-dark Refresh
